Fixed some vulnerabilities ,change some views.Thanks to Stanislav Mantach for feedback

--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://mysql-babkamen.jelastic.neohost.net/vstup
-jdbc.username=website
+jdbc.url=jdbc:mysql://localhost:3306/vstup
+jdbc.username=root
 jdbc.password=
